layout works, use include header and footer at beginning and end of things

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
-<% layout('layout') -%>
-
+<% include header %>
 <div ng-controller="mainController" class="container">
 
 	<!-- HEADER AND TODO COUNT -->
@@ -49,3 +48,4 @@
 	</div>
 
 </div>
+<% include footer %>
