--- a/public/styles/upload-page.css
+++ b/public/styles/upload-page.css
@@ -1,4 +1,20 @@
 
 .upload {
 	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 70%;
+}
+
+
+.container {
+	text-align: center;
+}
+
+input {
+	font-size: 1.8em;
+}
+
+.browse {
+	font-size: 1.5em;
 }
