--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,7 +1,12 @@
 <% include header %>
-<div>
-	<div>
-		<p>UPLOAD WAS SUCCESSFUL!!</p>
+<link rel="stylesheet" href="styles/upload-page.css">
+<div class="container">
+	<div class="page-header">
+		<h1 >Upload Today's Appointments</h1>
 	</div>
+	<form class="input-append">		
+		<input type="text" placeholder="Choose file...">
+		<button type="button" class="btn browse">Browse</button>
+	</form>
 </div>
 <% include footer %>
