added title to results page

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,5 +1,6 @@
 <% include header %>
 <div class="container">
+  <h1> Optimized Routes for Today</h1>
   <h3> Technician Ralph </h3>
   <table class="table table-striped">
     <tr>
