--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,13 +24,20 @@
           </ul>
         </div>
         
-
-
-        
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
-
           <h1 class="page-header">Dashboard</h1>
+
+          <div class="row placeholders">
+            <div class="col-xs-6 col-sm-6 placeholder">
+              <a href="/upload" class="btn btn-success btn-lg" role="button">Upload Appointments</a>
+            </div>
+            <div class="col-xs-6 col-sm-6 placeholder">
+              <a href="/results" class="btn btn-primary btn-lg" role="button">Optimize Schedules</a>
+            </div>
+          </div>
+
+
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
               
