angular module wont load

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 
   <!-- ASSIGN OUR ANGULAR MODULE -->
-<html ng-app="ScheduleOptimizer">
+<html ng-app="RouteOptimizer">
 <head>
   <!-- META -->
   <meta charset="utf-8">
