--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,8 +27,9 @@
   </style>
 
   <link href="styles/index.css" rel="stylesheet">
+  <script src="js/services/employees.js"></script>
+
   <script src="js/controllers/main.js"></script> <!-- load up our controller -->
-  <script src="js/services/todos.js"></script> <!-- load our todo service -->
   <script src="js/core.js"></script> <!-- load our main application -->
 
 </head>
