--- a/public/styles/upload-page.css
+++ b/public/styles/upload-page.css
@@ -16,5 +16,13 @@ input {
 }
 
 .browse {
-	font-size: 1.5em;
+	font-size: 1.7em;
+	position: relative;
+  top: -4px;
+}
+
+.upload-button {
+	font-size: 1.7em;
+	position: relative;
+  top: -4px;
 }
