--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -5,8 +5,9 @@
 		<h1 >Upload Today's Appointments</h1>
 	</div>
 	<form class="input-append">		
-		<input type="text" placeholder="Choose file...">
 		<button type="button" class="btn browse">Browse</button>
+		<input type="text" placeholder="Choose file...">
+		<button type="button" class="btn upload-button">Upload</button>
 	</form>
 </div>
 <% include footer %>
