--- a/views/addemployee.ejs
+++ b/views/addemployee.ejs
@@ -1,7 +1,36 @@
 <% include header %>
 
-<div ng-controller='employeeController'>
-<h3>blehhhhh</h3>
+<div ng-controller='addEmployeeController'>
+  <div class="container">
+    <h1>Add new employee</h1>
+    <form novalidate>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input ng-model="employee.name" type="name" class="form-control" id="name" placeholder="Enter name">
+      </div>
+      <div class="form-group">
+        <label for="address">Address</label>
+        <input ng-model="employee.address" type="name" class="form-control" id="address" placeholder="Enter address">
+      </div>
+      <div class="form-group">
+        <label for="type">Type</label>
+        <div class="radio">
+          <label>
+            <input ng-model="employee.type" type="radio" name="optionsRadios" id="optionsRadios1" value="Salesperson" checked>
+            Salesperson
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input ng-model="employee.type" type="radio" name="optionsRadios" id="optionsRadios2" value="Technician">
+            Technician
+          </label>
+        </div>
+      </div>
+      <input ng-click="create(employee)" type="submit" class="btn btn-default" value="Add employee">
+    </form>
+    <pre>form = {{employee | json}}</pre>
+  </div>
 </div>
 
 <% include footer %>
