--- a/views/addemployee.ejs
+++ b/views/addemployee.ejs
@@ -29,7 +29,7 @@
       </div>
       <input ng-click="create(employee)" type="submit" class="btn btn-default" value="Add employee">
     </form>
-    <pre>form = {{employee | json}}</pre>
+    <button ng-click="test()">test</button>
   </div>
 </div>
 
