--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,6 +20,8 @@
 
   <!-- SPELLS -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
+  <script type="text/javascript"src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCF1HYGv5jlkAKUIDwDSpafH9duVZl7BMg"></script>
+  
 
   <style>
     html          { overflow-y:scroll; }
