--- a/views/view.ejs
+++ b/views/view.ejs
@@ -6,9 +6,10 @@
     <h1> Employee </h1>
 
     <ul class="list-group">
-      <li class="list-group-item" ng-repeat="stuff in view()">
-        <b>{{stuff.Type}}</b>
-        <div class="text-muted">{{stuff.Team}}</div>
+      <li class="list-group-item" ng-repeat="stuff in view">
+        <b>{{stuff.name}}</b>
+        <div class="text-muted">{{stuff.type}}</div>
+        <div class="text-muted">{{stuff.address}}</div>
       </li>
     </ul>
 
