Fetch appointments from DB and geocode them. Limited by google API right now.

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,6 +20,7 @@
 
   <!-- SPELLS -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script><!-- load Google Maps -->
 
   <style>
     html          { overflow-y:scroll; }
