--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,61 +2,63 @@
 
   <!-- ASSIGN OUR ANGULAR MODULE -->
 <html ng-app="RouteOptimizer">
-<head>
-  <!-- META -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <!-- META -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+      <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-  <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="../../favicon.ico">
 
-  <title>Schedule Optimizer</title>
-
-
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-
-  <!-- SPELLS -->
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
-
-  <style>
-    html          { overflow-y:scroll; }
-
-  </style>
-
-  <link href="styles/index.css" rel="stylesheet">
-
-</head>
+    <title>Schedule Optimizer</title>
 
 
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+
+    <!-- SPELLS -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script><!-- load angular -->
+
+    <style>
+      html          { overflow-y:scroll; }
+
+    </style>
+
+    <link href="styles/index.css" rel="stylesheet">
+
+  </head>
 
 
+  <!-- SET THE CONTROLLER -->
+  <body style='padding-top: 70px;'>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Optimizer</a>
+        </div>
 
-<!-- SET THE CONTROLLER -->
-<body style='padding-top: 70px;'>
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Optimizer</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-          <li><a href="/upload">Upload</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home<span class="sr-only">(current)</span></a></li>
+            <li><a href="/upload">Upload</a></li>
+            <li><a href="/employees">Employees</a></li>
+            <li><a href="/appointments">Appointments</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
 
 
-  </nav>
+    </nav>
+  </body>
+
+</html>  
