--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
 <script lang="javascript" src="dist/xlsx.core.min.js"></script>
 
-  <div class="container-fluid" ng-controller="employeeController">
+  <div class="container-fluid">
       <div class="row">
         
         <div class="col-sm-3 col-md-2 sidebar">
@@ -38,22 +38,7 @@
             </div>
           </div>
 
-          <h2 class="sub-header">Appointments</h2>
-          <div class="table-responsive">
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th ng-repeat="h in headers">{{h}}</th>                  
-                </tr>
-              </thead>
-              <tbody>
-                <tr ng-repeat="appt in appointments">
-                  <td ng-repeat="h in headers">{{appt[h]}}</td>                  
-                </tr>                
-              </tbody>
-            </table>
-          </div>
-
+          
         </div>
 
 
