--- a/views/appointments.ejs
+++ b/views/appointments.ejs
@@ -15,7 +15,7 @@
 
 		<tbody>
             <tr ng-repeat="appt in appointments">
-              <td ng-repeat="(key, value) in appt">{{value}}</td>                  
+              <td ng-repeat="h in headers">{{appt[h]}}</td>                  
             </tr>                
         </tbody>
 
