--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
 <script lang="javascript" src="dist/xlsx.core.min.js"></script>
 
-  <div class="container-fluid" ng-controller="employeeController">
+  <div class="container-fluid" >
       <div class="row">
         
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-1 main">
