--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,91 +1,24 @@
 <% include header %>
-<div class="container">
+<div class="container" ng-controller="viewResultsCtrl">
   <h1> Optimized Routes for Today</h1>
-  <h3> Technician Ralph </h3>
-  <table class="table table-striped">
+  <h3 ng-repeat-start="e in optimizedRoutes">{{e.employee.name}}</h3>
+  <table ng-repeat-end class="table table-striped">
     <tr>
-      <th>Route Order</th>
-      <th>Name</th>
-      <th>Address</th>
+      <th>Appt Id</th>
+      <th>Start Time</th>
+      <th>Customer Name</th>
+      <th>Job Site</th>
+      <th>Team</th>
+      <th>Appt Status</th>
     </tr>
-    <tr>
-      <td>1</td>
-      <td>John Smith</td>
-      <td>1234 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Bob Smith</td>
-      <td>56 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>John Doe</td>
-      <td>78 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Sally Sue</td>
-      <td>90 Michigan Ave</td>
-    </tr>
-  </table>
-
-  <h3> Technician Joe </h3>
-  <table class="table table-striped">
-    <tr>
-      <th>Route Order</th>
-      <th>Name</th>
-      <th>Address</th>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>John Smith</td>
-      <td>1234 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Bob Smith</td>
-      <td>56 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>John Doe</td>
-      <td>78 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Sally Sue</td>
-      <td>90 Michigan Ave</td>
-    </tr>
-  </table>
-
-  <h3> Technician Jeffrey </h3>
-  <table class="table table-striped">
-    <tr>
-      <th>Route Order</th>
-      <th>Name</th>
-      <th>Address</th>
-    </tr>
-    <tr>
-      <td>1</td>
-      <td>John Smith</td>
-      <td>1234 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Bob Smith</td>
-      <td>56 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>John Doe</td>
-      <td>78 Michigan Ave</td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Sally Sue</td>
-      <td>90 Michigan Ave</td>
-    </tr>
-  </table>
+    <tr ng-repeat="appt in findApptDetails(e.appointmentList)">
+      <td>{{appt['Appt Id']}}</td>
+      <td>{{appt['Start Time']}}</td>
+      <td>{{appt['Customer Name']}}</td>      
+      <td>{{appt['Job Site']}}</td>
+      <td>{{e.team}}</td>
+      <td>Assigned</td>
+    </tr>    
+  </table>  
 </div>
 <% include footer %>
