text added to alert user of backend action on upload and main page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,9 @@
         </div>
 
       </div>
+      <div class ="center" ng-show = "computing">
+        <h3>Computing Optimal Routes...</h3>
+      </div>
   </div>
 
     <!-- Bootstrap core JavaScript
