--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -103,3 +103,11 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
+
+.center {
+  text-align:center;
+  width: 50%;
+  font-style: italic;
+  margin:auto;
+}
