--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,8 +1,36 @@
 <% include header %>
+
+<style>
+  #map-canvas {
+    width: 500px;
+    height: 400px;
+  }
+</style>
+
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script>
+      function initialize() {
+        var mapCanvas = document.getElementById('map-canvas');
+        var mapOptions = {
+          center: new google.maps.LatLng(41.8369, -87.6847),
+          zoom: 8,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
+        var map = new google.maps.Map(mapCanvas, mapOptions);
+        var marker = new google.maps.Marker({
+          position: new google.maps.LatLng(41.8369, -87.6847),
+          map: map,
+          title: "Mark On Map"
+        });
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+
 <div class="container" ng-controller="viewResultsCtrl">
   <h1> Optimized Routes for Today</h1>
   <h3 ng-repeat-start="e in optimizedRoutes">{{e.employee.name}}</h3>
-  <table ng-repeat-end class="table table-striped">
+    <input np-repeat="e in optimizedRoutes" type="submit" value="Show map">
+  <table class="table table-striped">
     <tr>
       <th>Appt Id</th>
       <th>Start Time</th>
@@ -18,7 +46,9 @@
       <td>{{appt['Job Site']}}</td>
       <td>{{e.team}}</td>
       <td>Assigned</td>
-    </tr>    
+    </tr>   
+    
   </table>  
+  <div ng-repeat-end id="map-canvas"></div>
 </div>
 <% include footer %>
