--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -4,6 +4,8 @@
 	<div class="page-header">
 		<h1 >Upload Today's Appointments</h1>
 	</div>
+	<p>For <b>sales appointments:</b> Upload a csv file with these columns in the following order:</p>
+	<p>Appointment ID, Start Time, End Time, Opportunity Number, Customer Name, and Job Site</p>
 	<form class="form-inline" id="uploadForm">			
 		<input type="file" class="file-input btn-lg" id = "fileN" file-model="uploadFile">
 		<label  class = "first-radio">
