--- a/views/addemployee.ejs
+++ b/views/addemployee.ejs
@@ -13,6 +13,18 @@
         <input ng-model="employee.address" type="name" class="form-control" id="address" placeholder="Enter address">
       </div>
       <div class="form-group">
+        <label for="team">team</label>
+        <select ng-model="employee.team" type="name" class="form-control" id="team" placeholder="Enter team">
+          <option value="GreenBay">GreenBay</option>
+          <option value="Madison">Madison</option>
+          <option value="Milwaukee">Milwaukee</option>
+          <option value="Peoria">Peoria</option>
+          <option value="Rockford">Rockford</option>
+          <option value="South">South</option>
+          <option value="North">North</option>
+        </select>
+      </div>
+      <div class="form-group">
         <label for="type">Type</label>
         <div class="radio">
           <label>
