--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -13,6 +13,7 @@
       <li class="list-group-item" ng-repeat="stuff in view">
         <b>{{stuff.name}}</b>
         <div class="text-muted">{{stuff.type}}</div>
+        <div class="text-muted">{{stuff.team}}</div>
         <div class="text-muted">{{stuff.address}}</div>
       </li>
     </ul>
