made some changes in algorithm code but still weird bug accessing element of json

--- a/views/addemployee.ejs
+++ b/views/addemployee.ejs
@@ -20,7 +20,7 @@
         <label for="type">Type</label>
         <div class="radio">
           <label>
-            <input ng-model="employee.type" type="radio" name="optionsRadios" id="optionsRadios1" value="Salesperson" checked>
+            <input ng-model="employee.type" type="radio" name="optionsRadios" id="optionsRadios1" value="Sales" checked>
             Salesperson
           </label>
         </div>
