--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,23 +8,6 @@
 </style>
 
 <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script>
-      function initialize() {
-        var mapCanvas = document.getElementById('map-canvas');
-        var mapOptions = {
-          center: new google.maps.LatLng(41.8369, -87.6847),
-          zoom: 8,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        }
-        var map = new google.maps.Map(mapCanvas, mapOptions);
-        var marker = new google.maps.Marker({
-          position: new google.maps.LatLng(41.8369, -87.6847),
-          map: map,
-          title: "Mark On Map"
-        });
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-</script>
 
 <div class="container" ng-controller="viewResultsCtrl">
   <h1> Optimized Routes for Today</h1>
@@ -49,6 +32,6 @@
     </tr>   
     
   </table>  
-  <div ng-repeat-end id="map-canvas"></div>
+  <div ng-repeat-end></div>
 </div>
 <% include footer %>
