--- a/views/addemployee.ejs
+++ b/views/addemployee.ejs
@@ -14,7 +14,7 @@
       </div>
       <div class="form-group">
         <label for="team">team</label>
-        <select ng-model="employee.team" type="name" class="form-control" id="team" placeholder="Enter team">
+        <select ng-model="employee.team" class="form-control" id="team" >
           <option value="GreenBay">GreenBay</option>
           <option value="Madison">Madison</option>
           <option value="Milwaukee">Milwaukee</option>
