--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -12,11 +12,10 @@
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="stuff in view">
         <b>{{stuff.name}}</b>
-        <div class="text-muted">{{stuff._id}}</div>
         <div class="text-muted">{{stuff.type}}</div>
         <div class="text-muted">{{stuff.team}}</div>
         <div class="text-muted">{{stuff.address}}</div>
-        <input ng-click="remove(stuff._id)" type="submit" class="btn btn-default" value="Delete employee by ID">
+        <input ng-click="remove(stuff._id)" type="submit" class="btn btn-default" value="Delete employee">
       </li>
     </ul>
   </div>
