fixed pop up box

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -21,7 +21,7 @@
 				Uploading...
 			</label>
 			<label ng-show="uploadingComplete" class = "alert-text">
-				Upload Complete! Click "Appointments" to view.
+				Click "Appointments" to view.
 			</label>		
 		</div>
 	</form>	
