--- a/views/addemployee.ejs
+++ b/views/addemployee.ejs
@@ -39,7 +39,7 @@
           </label>
         </div>
       </div>
-      <input ng-click="create(employee)" type="submit" class="btn btn-default" value="Add employee">
+      <input ng-click="create(employee)" type="submit" class="btn btn-default" value="Add employee" id='add-employee'>
       <input ng-click="remove(employee._id)" type="submit" class="btn btn-default" value="Delete employee by ID">
 
     </form>
