--- a/views/header.ejs
+++ b/views/header.ejs
@@ -51,8 +51,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="/">Home<span class="sr-only">(current)</span></a></li>
-            <li><a href="/upload">Upload</a></li>
-            <li><a href="/employees">Employees</a></li>
+            <li><a href="/upload" id='upload-button'>Upload</a></li>
+            <li><a href="/employees" id='employees-button'>Employees</a></li>
             <li><a href="/appointments">Appointments</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
