added unit and end2end tests

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
               <a href="/upload" class="btn btn-success btn-lg" role="button">Upload Appointments</a>
             </div>
             <div class="col-xs-6 col-sm-6 placeholder">
-              <a class="btn btn-primary btn-lg" role="button" ng-click="test()" href="/results">Optimize Schedules</a>
+              <a class="btn btn-primary btn-lg" id="generate" role="button" ng-click="test()" href="/results">Optimize Schedules</a>
             </div>
           </div>
         </div>
