--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -16,7 +16,7 @@
 		</label>
 		<br>	
 		<div class=form-group>	
-			<button type="submit" class="btn btn-lg" ng-click = "csvJSON()">Upload</button>
+			<button type="submit" class="btn btn-lg" id = "fileupload" ng-click = "csvJSON()">Upload</button>
 			<label ng-show="uploading" class = "alert-text">
 				Uploading...
 			</label>
