--- a/views/addemployee.ejs
+++ b/views/addemployee.ejs
@@ -5,6 +5,14 @@
     <h1>Add new employee</h1>
     <form novalidate>
       <div class="form-group">
+        <label >test1</label>
+        <input  ng-model="add1" placeholder="Enter number1" >
+      </div>
+      <div class="form-group">
+        <label >test2</label>
+        <input  ng-model="add2" placeholder="Enter number2">
+      </div>
+      <div class="form-group">
         <label for="add-name">Name</label>
         <input ng-model="employee.name" type="name" class="form-control" id="add-name" placeholder="Enter name">
       </div>
@@ -39,8 +47,12 @@
           </label>
         </div>
       </div>
+      <input ng-click="test()" type="submit" class="btn btn-default" id="plus" >
       <input ng-click="create(employee)" type="submit" class="btn btn-default" value="Add employee">
       <input ng-click="remove(employee._id)" type="submit" class="btn btn-default" value="Delete employee by ID">
+   
+      <input ng-model="sum" id="result">
+     
 
     </form>
 
